fixing spacing on 'software' feature on `/pupil` page

--- a/assets/stylus/components/grid.styl
+++ b/assets/stylus/components/grid.styl
@@ -278,6 +278,17 @@
 		flex 0 0 100%
 		max-width 100%
 		
+.Aligner-item--sm
+	display flex
+	flex 0 0 33.33333%
+	max-width 33.33333%
+	padding 0.5em 1.4em 1em 1.4em
+
+	@media $break-md
+		padding 0em 
+		flex 0 0 100%
+		max-width 100%
+		
 .Aligner-item--column
 	width 100%
 	display flex
